tests/errors/test_11.x
// If conditional is not boolean

fn main() -> i64 {

    if 1 {
        outI64(1);
    }

    if 'c' {
      outI64(1);
    }

}